docker/kubernetes/glusterfs.yml
apiVersion: v1
kind: "Service"
metadata:
  name: glusterfs-cluster
  namespace: xaiweb-2021
spec:
  ports:
    - port: 1
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: xaiweb-2021
subsets:
  - addresses:
      - ip: 192.168.70.160
    ports:
      - port: 1
  - addresses:
      - ip: 192.168.70.161
    ports:
      - port: 1
---
