docker/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: template-wordpress
  namespace: xaiweb-2021
spec:
  type: NodePort
  selector:
    app: template-wordpress
  ports:
    - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: template-mysql
  namespace: xaiweb-2021
spec:
  type: ClusterIP
  selector:
    app: template-mysql
  ports:
    - port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: template-postfix
  namespace: xaiweb-2021
spec:
  type: ClusterIP
  selector:
    app: template-postfix
  ports:
    - port: 25
